--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,171 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import 'primereact/resources/themes/saga-blue/theme.css';
+@import 'primereact/resources/primereact.min.css';
+
+body{
+  background-color: black;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  align-items: center;
+  text-align: center;
+  gap: 2%;
+  font-size: 1.5vw;
+}
+
+.introduction-place{
+  height: auto;
+  width: 50%;
+  background-color: #0D1117;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-style: solid;
+  border-width: thin;
+  border-radius: 10px;
+  border-color: gray;
+}
+
+
+.introduction-place div:nth-child(1) {
+  font-size: 2vw;
+  font-weight: bold; 
+}
+.manual-geo-place{
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;  
+}
+.manual-geo{
+
+  width: 10%;
+  background-color: #0D1117;
+  border-style: solid;
+  border-width: thin;
+  border-radius: 10px;
+  border-color: gray;
+
+}
+.location-geo{
+ 
+  width: 10%;
+  background-color: #0D1117;
+  border-style: solid;
+  border-width: thin;
+  border-radius: 10px;
+  border-color: gray;
+}
+
+.leaflet-place-text {
+  display: flex;
+  flex-direction: column; 
+  border-style: solid;
+  border-width: thin;
+  border-radius: 10px;
+  border-color: gray;
+  width: 50%;
+  
+}
+
+.leaflet-container {
+  border: solid;
+  border-color: black;
+  min-height: 30vh; 
+  width: 50%;
+}
+
+
+.table-info{
+  height: auto;
+  width: 50%;
+  display: flex;
+  gap: 1%;
+ 
+}
+.table-info-data-placement{
+  border-style: solid;
+  border-width: thin;
+  border-radius: 10px;
+  border-color: gray;
+  height: 100%;
+  gap: 1%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 16%;
+}
+
+input{
+  width: 90%;
+  height: 100%;
+}
+button{
+  background-color: #3593F8;
+  font-size: 1vw;
+  border-radius: 10px;
+  border: none;
+  
+}
+button:active {
+  transform: translate(0.5px, 0.5px);
+}
+
+.table-info img{
+  height: auto;
+  width: 50%;
+}
+
+@media only screen and (max-width: 1024px) {
+  .container{
+    font-size: 3.5vw;
+  }
+  .introduction-place{
+   width: 95%;
+  }
+.introduction-place div:nth-child(1) {
+  font-size: 5vw;
+  font-weight: bold; 
+}
+  .manual-geo-place {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+
+  }
+  .manual-geo{
+    min-width: 70%;
+  }
+  .location-geo
+  {
+    min-width: 70%;
+  }
+
+  .manual-geo{
+    width: 50%;
+  }
+  .location-geo{
+    width: 50%;
+  }
+  .leaflet-place-text{
+    min-width: 99%;
+  }
+  .leaflet-container{
+    min-width: 99%;
+  }
+  input{
+    font-size: 4vw;
+  }
+  button{
+    font-size: 4vw;
+  }
+  .table-info{
+    font-size: 3.3vw;
+    width: 100%;
+  }
+
 }
